# BA2Manager

./: .gitignore  API_REFERENCE.md  BETA_RELEASE_NOTES_v2.0.0-beta.1.md  BETA_RELEASE_NOTES_v2.0.0-beta.2.md  BETA_RELEASE_NOTES_v2.0.0-beta.3.md  BETA_RELEASE_NOTES_v2.0.0-beta.4.md  BETA_RELEASE_NOTES_v2.0.0-beta.5.md  BETA_RELEASE_NOTES_v2.0.0-beta.6.md  BETA_RELEASE_NOTES_v2.0.0-beta.9.md  BETA_TESTING_CHECKLIST.md  CC_PACKER_SEPARATION.md  CHANGELOG.md  DIAGNOSTIC_LOGGING_GUIDE.md  GITHUB_RELEASE_GUIDE.md  MERGE_TEST_MONITORING.md  NEXUS_DESCRIPTION.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RELEASE_NOTES_v1.1.4.md  RELEASE_NOTES_v2.0.0-beta.7.md  RELEASE_NOTES_v2.0.0.md  RELEASE_PACKAGE_SUMMARY.md  REPOSITORY_SEPARATION_SUMMARY.md  SETUP_COMPLETE.md  analyze_ba2_conflicts.py  ba2-manager.spec  ba2_manager.spec  ba2_manager_modlist.json  build_release.bat  create_icon.py  debug_count.py  main.spec  manage_ba2_pro.ps1  pyproject.toml  requirements-dev.txt
CC_Packer/: README.md
ba2_manager/: __init__.py  ba2_manager_modlist.json  config.py  main.py
ba2_manager/core/: ba2_handler.py
ba2_manager/gui/: __init__.py  main_window.py
temp_cc_test/Textures/CreationClub/ACXFO4001/Clothes/VaultSuit/FO3/: VaultSuitNumber000_d.DDS  VaultSuitNumber000_n.DDS  VaultSuitNumber001_d.DDS  VaultSuitNumber002_n.DDS  VaultSuitNumber003_d.DDS  VaultSuitNumber003_n.DDS  VaultSuitNumber005_d.DDS  VaultSuitNumber005_n.DDS  VaultSuitNumber005_s.DDS  VaultSuitNumber006_n.DDS  VaultSuitNumber006_s.DDS  VaultSuitNumber007_d.DDS  (+204 more)
tests/: __init__.py  test_ba2_handler.py
(+543 files in other folders)
