[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ba2-manager"
version = "1.1.4"
description = "BA2 Manager - Comprehensive BA2 file management application"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "BA2 Manager Development"}
]
license = {text = "MIT"}
keywords = ["ba2", "manager", "file"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PyQt6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
ba2-manager = "ba2_manager.main:main"

[tool.setuptools]
packages = ["ba2_manager"]

[tool.setuptools.package-data]
ba2_manager = ["resources/*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
